<resources>
    <string name="app_name">LockApp</string>
    <string name="enter_title">Enter Title</string>
    <string name="select_apps">Select App</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="save">Save</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_notes_found">No Notes Found</string>
    <string name="selected_apps">Selected App: %1s</string>
    <string name="select_time_and_date">Select Time and Date</string>
    <string name="accessibility_service_description">Description of your Accessibility Service</string>

</resources>