<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        tools:context=".details.DetailsActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line_70"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />


        <EditText
            android:id="@+id/subject_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_title"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/content_et"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/content_border"
            android:gravity="top"
            android:hint="content.."
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@id/guide_line_70"
            app:layout_constraintTop_toBottomOf="@id/subject_et" />


        <Button
            android:id="@+id/select_apps_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_apps"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content_et" />


        <Button
            android:id="@+id/ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/select_apps_btn" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>