<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        tools:context=".notes.fragment.NotesDetailsFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line_70"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />


        <EditText
            android:id="@+id/subject_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_title"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/content_et"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/content_border"
            android:gravity="top"
            android:hint="content.."
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@id/guide_line_70"
            app:layout_constraintTop_toBottomOf="@id/subject_et" />


        <Button
            android:id="@+id/select_apps_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_apps"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content_et" />

        <Button
            android:id="@+id/select_time_date_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/select_time_and_date"
            app:layout_constraintStart_toEndOf="@id/select_apps_btn"
            app:layout_constraintTop_toBottomOf="@id/content_et" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/app_details_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/select_apps_btn">

            <TextView
                android:id="@+id/app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginStart="15dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/appIconImageView"
                app:layout_constraintStart_toEndOf="@id/appIconImageView"
                app:layout_constraintTop_toTopOf="@id/appIconImageView"
                tools:text="Subject One" />

            <ImageView
                android:id="@+id/appIconImageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/selected_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_details_layout" />

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:paddingVertical="10dp"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/ok_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:paddingVertical="10dp"
                android:text="@string/select" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>